unpackaged/main/default/objects/Evaluation_de_la_douleur__c/Evaluation_de_la_douleur__c.object-meta.xml
<CustomObject>
    <label>Evaluation de la douleur</label>
    <nameField>
        <displayFormat>ED-{00000000}</displayFormat>
        <label>Nom de Evaluation de la douleur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Evaluations de la douleur</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>