unpackaged/main/default/objects/Evaluation_de_la_douleur__c/fields/Date_de_l_valuation__c.field-meta.xml
<CustomField>
    <fullName>Date_de_l_valuation__c</fullName>
    <label>Date de l&apos;évaluation</label>
    <type>Date</type>
</CustomField>