unpackaged/main/default/objects/Evaluation_de_la_douleur__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Evaluations de la douleur</relationshipLabel>
    <relationshipName>Evaluations_de_la_douleur</relationshipName>
    <type>Lookup</type>
</CustomField>