unpackaged/main/default/objects/Evaluation_de_la_douleur__c/fields/Dossier_de_soins__c.field-meta.xml
<CustomField>
    <fullName>Dossier_de_soins__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier de soins</label>
    <referenceTo>Dossier_de_soins__c</referenceTo>
    <relationshipLabel>Evaluations de la douleur</relationshipLabel>
    <relationshipName>Evaluations_de_la_douleur</relationshipName>
    <type>Lookup</type>
</CustomField>