unpackaged/main/default/objects/Evaluation_de_la_douleur__c/fields/Localisation_de_la_douleur__c.field-meta.xml
<CustomField>
    <fullName>Localisation_de_la_douleur__c</fullName>
    <label>Localisation de la douleur</label>
    <length>200</length>
    <type>Text</type>
</CustomField>