unpackaged/main/default/objects/Evaluation_de_la_douleur__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Evaluations de la douleur</relationshipLabel>
    <relationshipName>Evaluations_de_la_douleur</relationshipName>
    <type>Lookup</type>
</CustomField>